# temis_backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  SCHEMA_DOCUMENTATION.md  config.py  main.py  models.py  pyproject.toml  test.py
src/: config.py  database.py  dependencies.py  main.py  models.py  services.py
src/api/: dependencies.py
src/api/routes/: __init__.py  auth.py  components.py  exports.py  integrations.py  orders.py  products.py  sales.py
src/api/routes/integrations/: __init__.py  tiendanube.py  tiendanube_deps.py
src/api/schemas/: __init__.py  auth.py  customers.py  invoices.py  orders.py  products.py  sales.py  tiendanube.py
src/core/: __init__.py  config.py  database.py  exceptions.py
src/database/migrations/: 001_create_enums.sql  002_create_tenant.sql  003_create_customer.sql  004_create_product.sql  005_create_order.sql  006_create_order_product.sql  007_create_invoice.sql  rollback_all.sql  run_all_migrations.sql  seed_data.sql
src/repositories/: __init__.py  tiendanube_repo.py
src/routes/: __init__.py  auth.py  components.py  integrations.py  orders.py  products.py
src/services/: __init__.py  auth.py  components.py  orders.py  products.py  sales.py  tiendanube.py  wspp_business.py
src/services/afip/: __init__.py  afip_service.py  client.py  invoice_service.py  invoices.py
